Bug 409327 - Leaf-node KCMs have two tooltips in Icon view
Summary: Leaf-node KCMs have two tooltips in Icon view
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: iconview (other bugs)
Version First Reported In: 5.19.4
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: kdelibs bugs
URL:
Keywords:
: 394840 418177 (view as bug list)
Depends on:
Blocks:
 
Reported: 2019-06-30 12:22 UTC by Alexander Potashev
Modified: 2022-05-20 20:08 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.25
Sentry Crash Report:


Attachments
screenshot (38.64 KB, image/png)
2019-06-30 12:22 UTC, Alexander Potashev
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Alexander Potashev 2019-06-30 12:22:12 UTC
Created attachment 121231 [details]
screenshot

SUMMARY
Colors KCM has two tooltips. See screenshot.

STEPS TO REPRODUCE
1. Hover the Colors icon in System Settings.
2. 
3. 

OBSERVED RESULT
two tooltips

EXPECTED RESULT
one tooltip

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Nate Graham 2019-06-30 14:06:57 UTC
Just the colors KCM? Or does this affect other KCMs when using Icons view?
Comment 2 Alexander Potashev 2019-06-30 15:41:59 UTC
Some other items are also affected: Look and Feel, Notifications, Account Details, etc - those that represent a single KCM. If an item is a container/folder for other KCM, then only one tooltip appears (the larger one).
Comment 3 Alexander Potashev 2019-06-30 15:46:19 UTC
In tree view this is reproducible for all "leaf" items: the above mentioned (Colors, ...) and also for example for Mouse Cursor Themes KCM which is under "Workspace Appearance".
Comment 4 Nate Graham 2019-06-30 15:53:44 UTC
Thanks, I see it too.
Comment 5 Patrick Silva 2019-07-08 14:13:22 UTC
*** Bug 394840 has been marked as a duplicate of this bug. ***
Comment 6 Patrick Silva 2020-01-10 13:14:29 UTC
The following KCMs are affected on my system:

global theme
plasma style
colors
cursors
notifications
online accounts (not installed by default)
connections
display and monitor
audio
storage devices (available when KDiskFree is installed)
thunderbolt
system information

Operating System: Arch Linux 
KDE Plasma Version: 5.17.5
KDE Frameworks Version: 5.65.0
Qt Version: 5.14.0
Comment 7 Nate Graham 2020-02-26 18:56:11 UTC
*** Bug 418177 has been marked as a duplicate of this bug. ***
Comment 8 Bug Janitor Service 2022-05-19 22:17:23 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/systemsettings/-/merge_requests/143
Comment 9 Ismael Asensio 2022-05-20 13:22:23 UTC
Git commit ce0a4ce3efb128e55990c9bb4f697a4221db3f74 by Ismael Asensio.
Committed on 19/05/2022 at 21:53.
Pushed by iasensio into branch 'master'.

IconView: Remove duplicated tooltips

We have advanced nicer tooltips, so the default QWidget tooltip
automatically created from the role just duplicates this information
FIXED-IN: 5.25

M  +0    -3    core/MenuModel.cpp

https://invent.kde.org/plasma/systemsettings/commit/ce0a4ce3efb128e55990c9bb4f697a4221db3f74
Comment 10 Ismael Asensio 2022-05-20 20:08:04 UTC
Git commit fe9ea26f45bd755b893f82fe20df967958412832 by Ismael Asensio.
Committed on 20/05/2022 at 20:08.
Pushed by iasensio into branch 'Plasma/5.25'.

IconView: Remove duplicated tooltips

We have advanced nicer tooltips, so the default QWidget tooltip
automatically created from the role just duplicates this information
FIXED-IN: 5.25


(cherry picked from commit ce0a4ce3efb128e55990c9bb4f697a4221db3f74)

M  +0    -3    core/MenuModel.cpp

https://invent.kde.org/plasma/systemsettings/commit/fe9ea26f45bd755b893f82fe20df967958412832