IconView: Remove duplicated tooltips

We have advanced nicer tooltips, so the default QWidget tooltip
automatically created from the role just duplicates this information

BUG: 409327
FIXED-IN: 5.25


(cherry picked from commit ce0a4ce3efb128e55990c9bb4f697a4221db3f74)